iptabs/rule.v4
# Generated by iptables-save v1.6.0 on Mon Jan 14 18:02:37 2019
*filter
:INPUT DROP [0:65535]
:FORWARD DROP [0:65535]
:OUTPUT ACCEPT [0:65535]
:block-scan - [0:65535]

-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.0/8 -j REJECT

-A INPUT -i enp0s25 -p tcp -m multiport --dports 80,443,8080 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

-A INPUT -s 192.168.0.0/24 -p tcp -m multiport --dports 80,443,8080,3306,48555 -j ACCEPT
-A INPUT -i enp0s25 -p tcp -m tcp --dport 51413 -j ACCEPT

#-A INPUT -p tcp -m tcp --dport 4538 -j ACCEPT
#-A INPUT -i enp0s25 -p tcp -m multiport --dports 53185:53195 -j ACCEPT

-A INPUT -p tcp -m multiport --dports 80,443,8080 -m limit --limit 20/min --limit-burst 100 -j REJECT
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables input denied: " --log-level 7

-A OUTPUT -m limit --limit 5/min -j LOG --log-prefix "iptables output " --log-level 7

-A block-scan -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1/sec -j RETURN
-A block-scan -j DROP
-A block-scan -m limit --limit 5/min -j LOG --log-prefix "iptables block-scan " --log-level 7
COMMIT
# Completed on Mon Jan 14 18:02:37 2019
